--- a/Ansible/httpd.yaml
+++ b/Ansible/httpd.yaml
@@ -1,17 +1,15 @@
 ---
-- name: Apache Hello World
-  hosts: 127.0.0.1
-  gather_facts: false
-  connection: local
-  tasks:
-    - name: Install Apache
-      yum:
-        name: httpd
-        state: present
-      changed_when: false
-    - name: Create a default page
-      shell: echo "<h1>Hello world from Ansible & Terraform - Pull Requests Test</h1>" > /var/www/html/index.html
-      changed_when: false
-    - name: Enable Apache
-      service: name=httpd enabled=yes state=started
-      changed_when: false
+- name: This sets up an httpd webserver
+  hosts: localhost
+  tasks:  
+  - name: Install apache packages AWS
+    yum:
+      name: httpd
+      state: present
+    when: ansible_facts['os_family'] == "Amazon"
+  - name: Install apache packages Azure
+    apt: name=apache2 update_cache=yes state=present
+    when: ansible_facts['os_family'] == "Ubuntu"
+  - name: Create a default page
+    shell: echo "<h1>Hello world from Packer & Ansible</h1>" > /var/www/html/index.html
+    changed_when: false
