--- a/Ansible/httpd.yaml
+++ b/Ansible/httpd.yaml
@@ -3,13 +3,16 @@
   hosts: localhost
   tasks:  
   - name: Install apache packages AWS
+    become: yes
     yum:
       name: httpd
       state: present
-    when: ansible_facts['os_family'] == "Amazon"
+    when: ansible_distribution == "Amazon"
   - name: Install apache packages Azure
+    become: yes
     apt: name=apache2 update_cache=yes state=present
-    when: ansible_facts['os_family'] == "Ubuntu"
+    when: ansible_distribution == "Ubuntu"
   - name: Create a default page
+    become: yes
     shell: echo "<h1>Hello world from Packer & Ansible</h1>" > /var/www/html/index.html
     changed_when: false
